--- a/d2/server/public/results.html
+++ b/d2/server/public/results.html
@@ -26,6 +26,6 @@
     <noscript>
         You need to enable JavaScript to run this app.
     </noscript>
-    <script src="/homepage.js" type="text/javascript"></script>
+    <script src="/resultspage.js" type="text/javascript"></script>
   </body>
 </html>
