--- a/d2/src/public/testauth.html
+++ b/d2/src/public/testauth.html
@@ -30,6 +30,7 @@
 
     <script src="https://apis.google.com/js/platform.js" async defer></script>
 
-    <script src="/homepage.js" type="text/javascript"></script>
-  </body>
+    <div class="g-signin2" data-onsuccess="onSignIn"></div>
+  
+    </body>
 </html>
